Wechseln zwischen DE und EN implementiert, responsive Design, Design Feinschliff, Tool für Doku installiert

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,35 +1,59 @@
 {
-  "home": "Home",
-  "clubs": "Clubs",
-  "settings": "Settings",
-  "about": "About",
-  "selectTeam": "Select team",
-  "clearTeamSelection": "Clear selection",
-  "selectSeason": "Select season",
-  "matches": "Matches",
-  "roundTitle": "Rounds",
-  "group": "Group",
-  "selectRound": "Select round",
-  "groupStage": "Groupsstage",
-  "matchday": "Matchday",
-  "counter": "#",
-  "firstLeg": "first leg",
-  "secondLeg": "second leg",
-  "roundOf16": "Round of 16",
-  "quarterFinal": "Quarter-finals",
-  "semiFinal": "Semi-finals",
-  "final": "Final",
-  "groups": "Groups",
-  "club": "Club",
-  "played": "Pl.",
-  "won": "W",
-  "draw": "D",
-  "los": "L",
-  "goalsFor": "GF",
-  "goalsAgainst": "GA",
-  "goalsDiff": "GD",
+  "_comment": "Add all 32 Team Names",
+  "home": "Startseite",
+  "predictions": "Vorhersagen",
+  "login": "Anmelden",
+  "logout": "Abmelden",
+  "groupStands": "Gruppenstände",
+  "koStages": "K.o.-Phasen",
+  "allMatches": "Alle Spiele",
+  "news": "Nachrichten",
+  "groups": "Gruppen",
+  "group": "Gruppe",
+  "team": "Verein",
+  "played": "Sp.",
+  "won": "S",
+  "draw": "U",
+  "lost": "N",
+  "goalsFor": "T",
+  "goalsAgainst": "GT",
+  "goalsDiff": "TD",
   "points": "P",
-  "currentNews": "Current news",
-  "readOn": "read on...",
-  "seasonNotAvailable": "This season is not available, please choose other season."
+  "_comment1": "-----------------",
+  "XgroupStage": "Gruppenphase",
+  "XroundOf16": "Achtelfinale",
+  "XquarterFinal": "Viertelfinale",
+  "XsemiFinal": "Halbfinale",
+  "XthirdPlace": "Dritter Platz",
+  "Xfinal": "Finale",
+  "Group stage": "Gruppenphase",
+  "Round of 16": "Achtelfinale",
+  "Quarter-finals": "Viertelfinale",
+  "Semi-finals": "Halbfinale",
+  "Third place": "Dritter Platz",
+  "Final": "Finale",
+  "_comment2": "-----------------",
+  "matches": "Spiele",
+  "selectStage": "Phase auswählen",
+  "selectGroup": "Gruppe auswählen",
+  "all": "Alle",
+  "readOn": "weiter lesen",
+  "contact": "Kontakt",
+  "noData": "Daten können leider nicht geladen werden",
+  "email": "Email",
+  "password": "Passwort",
+  "reset": "Zurücksetzen",
+  "firstName": "Vorname",
+  "lastName": "Nachname",
+  "repeatPassword": "Passwort wiederholen",
+  "register": "Registrieren",
+  "required": "Pflichtfeld",
+  "maxLength": "Max. Länge 20 Zeichen",
+  "minLength": "Min. Länge 6 Zeichen",
+  "validEmail": "Bitte geben Sie eine gültige E-Mail Adresse ein",
+  "yourPredictions": "Ihre Vorhersagen",
+  "setNewPredictions": "Neue Vorhersage setzen",
+  "setPredictions": "Vorhersagen setzen",
+  "cancel": "Abbrechen",
+  "userManual": "Benutzerhandbuch"
 }
