--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,35 +1,59 @@
 {
+  "_comment": "Add all 32 Team Names",
   "home": "Home",
-  "clubs": "Clubs",
-  "settings": "Settings",
-  "about": "About",
-  "selectTeam": "Select team",
-  "clearTeamSelection": "Clear selection",
-  "selectSeason": "Select season",
-  "matches": "Matches",
-  "roundTitle": "Rounds",
-  "group": "Group",
-  "selectRound": "Select round",
-  "groupStage": "Groupsstage",
-  "matchday": "Matchday",
-  "counter": "#",
-  "firstLeg": "first leg",
-  "secondLeg": "second leg",
-  "roundOf16": "Round of 16",
-  "quarterFinal": "Quarter-finals",
-  "semiFinal": "Semi-finals",
-  "final": "Final",
+  "predictions": "Predictions",
+  "login": "Login",
+  "logout": "Logout",
+  "groupStands": "Group stands",
+  "koStages": "K.o. Stages",
+  "allMatches": "All matches",
+  "news": "News",
   "groups": "Groups",
-  "club": "Club",
+  "group": "Group",
+  "team": "Team",
   "played": "Pl.",
   "won": "W",
   "draw": "D",
-  "los": "L",
-  "goalsFor": "GF",
+  "lost": "L",
+  "goalsFor": "G",
   "goalsAgainst": "GA",
   "goalsDiff": "GD",
   "points": "P",
-  "currentNews": "Current news",
-  "readOn": "read on...",
-  "seasonNotAvailable": "This season is not available, please choose other season."
+  "_comment1": "-----------------",
+  "XgroupStage": "Group stage",
+  "XroundOf16": "Round of 16",
+  "XquarterFinal": "Quarter-final",
+  "XsemiFinal": "Semi-final",
+  "XthirdPlace": "Third place",
+  "Xfinal": "Final",
+  "Group stage": "Group stage",
+  "Round of 16": "Round of 16",
+  "Quarter-finals": "Quarter-final",
+  "Semi-finals": "Semi-final",
+  "Third place": "Third place",
+  "Final": "Final",
+  "_comment2": "-----------------",
+  "matches": "Matches",
+  "selectStage": "Select stage",
+  "selectGroup": "Select group",
+  "all": "All",
+  "readOn": "read on",
+  "contact": "Contact",
+  "noData": "Unfortunately data can not be loaded",
+  "email": "Email",
+  "password": "Password",
+  "reset": "Reset",
+  "firstName": "First name",
+  "lastName": "Last name",
+  "repeatPassword": "Repeat password",
+  "register": "Register",
+  "required": "Required",
+  "maxLength": "Max. length 20 characters",
+  "minLength": "Min. length 6 characters",
+  "validEmail": "Please enter a valid email address",
+  "yourPredictions": "Your Predictions",
+  "setNewPredictions": "Set new prediction",
+  "setPredictions": "Set predictions",
+  "cancel": "Cancel",
+  "userManual": "User manual"
 }
