--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -28,8 +28,8 @@
   "Xfinal": "Final",
   "Group stage": "Group stage",
   "Round of 16": "Round of 16",
-  "Quarter-finals": "Quarter-final",
-  "Semi-finals": "Semi-final",
+  "Quarter-Finals": "Quarter-final",
+  "Semi-Finals": "Semi-final",
   "Third place": "Third place",
   "Final": "Final",
   "_comment2": "-----------------",
