--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -28,8 +28,8 @@
   "Xfinal": "Finale",
   "Group stage": "Gruppenphase",
   "Round of 16": "Achtelfinale",
-  "Quarter-finals": "Viertelfinale",
-  "Semi-finals": "Halbfinale",
+  "Quarter-Finals": "Viertelfinale",
+  "Semi-Finals": "Halbfinale",
   "Third place": "Dritter Platz",
   "Final": "Finale",
   "_comment2": "-----------------",
