Ländernamen auf DE

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -55,5 +55,37 @@
   "setNewPredictions": "Neue Vorhersage setzen",
   "setPredictions": "Vorhersagen setzen",
   "cancel": "Abbrechen",
-  "userManual": "Benutzerhandbuch"
+  "userManual": "Benutzerhandbuch",
+  "Qatar": "Katar",
+  "Senegal": "Senegal",
+  "Netherlands": "Niederlande",
+  "Ecuador": "Ecuador",
+  "France": "Frankreich",
+  "Australia": "Australien",
+  "Tunisia": "Tunesien",
+  "Denmark": "Dänemark",
+  "England": "England",
+  "United States": "USA",
+  "Wales": "Wales",
+  "Iran": "Iran",
+  "Argentina": "Argentinien",
+  "Mexico": "Mexiko",
+  "Saudi Arabia": "Saudi Arabien",
+  "Poland": "Polen",
+  "Spain": "Spanien",
+  "Japan": "Japan",
+  "Costa Rica": "Costa Rica",
+  "Germany": "Deutschland",
+  "Belgium": "Belgien",
+  "Morocco": "Marokko",
+  "Croatia": "Kroatien",
+  "Canada": "Kanada",
+  "Brazil": "Brasilien",
+  "Switzerland": "Schweiz",
+  "Cameroon": "Kamerun",
+  "Serbia": "Serbien",
+  "Ghana": "Ghana",
+  "Portugal": "Portugal",
+  "Uruguay": "Uruguay",
+  "South Korea": "Südkorea"
 }
