--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -55,5 +55,37 @@
   "setNewPredictions": "Set new prediction",
   "setPredictions": "Set predictions",
   "cancel": "Cancel",
-  "userManual": "User manual"
+  "userManual": "User manual",
+  "Qatar": "Qatar",
+  "Senegal": "Senegal",
+  "Netherlands": "Netherlands",
+  "Ecuador": "Ecuador",
+  "France": "France",
+  "Australia": "Australia",
+  "Tunisia": "Tunisia",
+  "Denmark": "Denmark",
+  "England": "England",
+  "United States": "United States",
+  "Wales": "Wales",
+  "Iran": "Iran",
+  "Argentina": "Argentina",
+  "Mexico": "Mexico",
+  "Saudi Arabia": "Saudi Arabia",
+  "Poland": "Poland",
+  "Spain": "Spain",
+  "Japan": "Japan",
+  "Costa Rica": "Costa Rica",
+  "Germany": "Germany",
+  "Belgium": "Belgium",
+  "Morocco": "Morocco",
+  "Croatia": "Croatia",
+  "Canada": "Canada",
+  "Brazil": "Brazil",
+  "Switzerland": "Switzerland",
+  "Cameroon": "Cameroon",
+  "Serbia": "Serbia",
+  "Ghana": "Ghana",
+  "Portugal": "Portugal",
+  "Uruguay": "Uruguay",
+  "South Korea": "South Korea"
 }
