--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -52,7 +52,7 @@
   "minLength": "Min. Länge 6 Zeichen",
   "validEmail": "Bitte geben Sie eine gültige E-Mail Adresse ein",
   "yourPredictions": "Ihre Vorhersagen",
-  "setNewPredictions": "Neue Vorhersage setzen",
+  "setNewPredictions": "Neu vorhersagen",
   "setPredictions": "Vorhersagen setzen",
   "cancel": "Abbrechen",
   "userManual": "Benutzerhandbuch",
